➕ADD :  New implementations for the UI.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fresquilla</title>
   </head>
-  <body class="bg-white selection:bg-red-400">
+  <body class="bg-zinc-50 selection:bg-red-400">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
